fixed spacing
fixed spacing on mobile view

--- a/app/css/stylesheet.css
+++ b/app/css/stylesheet.css
@@ -55,6 +55,7 @@ button{
 
 button {
     width: 20%;
+    margin-right: 10px;
 }
 
 }
